Starting to write the radar-relations code. Not functional yet, and much of the main routine can be pushed into library functions. See code for details.
want to plot the radar relation results as contours
- x axis: degree of alignment
- y axis: observation angle

size distribution:
- gamma distribution
  n(D)=N0 D^\mu exp(-\lambda D)

volume extinction coefficient: k_e === \int_0^\infty \sigma_e(D) n(D) dD
volume scattering coefficient: k_s is similar

effective radar reflectivity factor: Z_e === \frac{\lambda^4}{\pi^5 |K_w|^2} \int_0^\infty \sigma_b(D) n(D) dD
 - \lambda is radar wavelength
 - |K_w|^2 = 0.93 by convention
   1/[K_w] = |(m^2+2)/(m^2-1)|



0) read in all parameters
1) load in all ddscat runs, extract aeffs
2) iterate over all observation angles and principal concentration parameters
3) for each shape, calculate specific concentration parameter (kappa)
4) generate shape-specific weights (rtmath::ddscat::weights) and get cross-sections
5) write per-particle results, if requested
6) calculate ensemble n(D) factors based on aeff spacing
7) Perform summations, and get:
 - volume extinction coefficient
 - volume scattering coefficient
 - effective radar reflectivity factor
8) write ensemble results


At this point, I need to store the conc, obs angle, particle aeff, cross-section results.
Then, a second loop will be executed, iterating over the known data to determine n(D) given my options.
It will calculate and write all of the volumetric properties.


It is around this point in my coding that I need to switch more into hdf5 writing, as the ddoutput reads are bound to be quite slow.


git-svn-id: file:///mnt/svn/rtmath@1307 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -49,6 +49,7 @@ addappdir(orientation-weights-1d ON)
 addappdir(orientation-weights-3d ON)
 addappdir(orientation-weights-3d-random ON)
 addappdir(orientation-weights-ddscat ON)
+addappdir(radar-relations ON)
 addappdir(rpline ON)
 addappdir(rtmath-version ON)
 addappdir(shape ON)
