git-svn-id: file:///mnt/svn/rtmath@1315 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -11,7 +11,7 @@ if(DEFINED HDF5_C_LIBRARIES)
 else()
 	set (h5libs hdf5 hdf5_cpp)
 endif()
-FIND_PACKAGE(szip)
+FIND_PACKAGE(SZIP)
 #	message("${SZIP_INCLUDE_DIRS}")
 #	message("${SZIP_LIBRARIES}")
 IF (DEFINED SZIP_LIBRARIES)
