--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library (rtmath_plugin_hdf5 SHARED
 	plugin-hdf5.cpp
 	plugin-hdf5.h
 	hdf5-ddoutput.cpp
+	hdf5-ddscat-ddpar.cpp
 	hdf5-shapefile.cpp
 	hdf5-shapestats.cpp
 	hdf5-voronoi.cpp
