The hdf5 ddoutput and parfile write operations should be complete. All changes have been implemented, and testing can now start on linux. Enabled compression with zlib for datasets.
git-svn-id: file:///mnt/svn/rtmath@1321 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -19,6 +19,9 @@ IF (DEFINED SZIP_LIBRARIES)
 	#	SET (h5libs ${h5libs} szip)
 ENDIF()
 
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
+
+
 add_library (rtmath_plugin_hdf5 SHARED 
 	plugin-hdf5.cpp
 	plugin-hdf5.h
