--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -6,3 +6,6 @@
 #define COMPRESS_ZLIB @COMPRESS_ZLIB@
 #define COMPRESS_GZIP @COMPRESS_GZIP@
 #define COMPRESS_BZIP2 @COMPRESS_BZIP2@
+
+#define COMPRESS_SZIP @COMPRESS_SZIP@
+
