Added program to visualize orientation weights. Will add in flake image and support scaling based on a cross-section or by the weights.
git-svn-id: file:///mnt/svn/rtmath@1326 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -62,6 +62,7 @@ addappdir(tmatrix-ddscat-extract ON)
 addappdir(tmatrix-oneellip ON)
 addappdir(tmatrix-optimize-with-ddscat OFF)
 addappdir(tmatrix-slice ON)
+addappdir(visualize-orientation-weights OFF)
 #add_subdirectory (da)
 #add_subdirectory (db-catalog-ddscat)
 #add_subdirectory (ddparse)
