hdf5 plugin can read shapefiles. Tested by linking code into the write routine. Still needs a dedicated read function in shapefile class. For full ddOutput reading, still need: - par file reading - regular ddOutput reading - read selector
git-svn-id: file:///mnt/svn/rtmath@1330 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -27,7 +27,9 @@ add_library (rtmath_plugin_hdf5 SHARED
 	plugin-hdf5.h
 	hdf5-ddoutput.cpp
 	hdf5-ddscat-ddpar.cpp
+	hdf5-ddscat-ddpar-read.cpp
 	hdf5-shapefile.cpp
+	hdf5-shapefile-read.cpp
 	hdf5-shapestats.cpp
 	hdf5-voronoi.cpp
 	)
