Starting the ddoutput reader. May have to change the writing functions to include some more header information. Code will not compile at this stage.
git-svn-id: file:///mnt/svn/rtmath@1333 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library (rtmath_plugin_hdf5 SHARED
 	plugin-hdf5.cpp
 	plugin-hdf5.h
 	hdf5-ddoutput.cpp
+	hdf5-ddoutput-read.cpp
 	hdf5-ddscat-ddpar.cpp
 	hdf5-ddscat-ddpar-read.cpp
 	hdf5-shapefile.cpp
