Added the ImageMagick code in a plugin and established a basic app. It loads and then rewrites an image.
Next:
- batch processing of images, with tsv export.
 - centroids and extents in x and y
 - Tikhonov regularization (manual)
 - Tikhonov regularization (automatic)
 - 3d volumetric center finding


git-svn-id: file:///mnt/svn/rtmath@1359 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/ImageMagick/CMakeLists.txt
+++ b/rtmath/plugins/ImageMagick/CMakeLists.txt
@@ -3,16 +3,24 @@ find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
-include_directories(${ImageMagick_INCLUDE_DIRs})
+#message("Include ${ImageMagick_INCLUDE_DIRS}")
+include_directories(${ImageMagick_INCLUDE_DIRS})
 
 add_library (rtmath_plugin_ImageMagick SHARED 
 	plugin-ImageMagick.cpp
 	plugin-ImageMagick.h
+	image-io.cpp
 	)
 addlib(rtmath_plugin_ImageMagick SHARED)
 
 set_target_properties( rtmath_plugin_ImageMagick PROPERTIES FOLDER "Plugins/Shapes")
-target_link_libraries(rtmath_plugin_ImageMagick ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat ${ImageMagick_LIBRARIES})
+target_link_libraries(rtmath_plugin_ImageMagick 
+	${rtmath_ddscat-libs} 
+	rtmath_core 
+	rtmath_ddscat 
+	rtmath_images
+	${rtmath_images-libs}
+	${ImageMagick_LIBRARIES})
 INSTALL(TARGETS rtmath_plugin_ImageMagick 
 	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
 	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
