--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -39,6 +39,7 @@ addappdir(ddscat-regenerate-run ON)
 addappdir(ddscat-test ON)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
+addappdir(image-basic ON)
 addappdir(liu-regenerate-runs ON)
 addappdir(mie-onesphere ON)
 addappdir(mie-slice ON)
