Added basic skeleton of a netcdf plugin.
git-svn-id: file:///mnt/svn/rtmath@1363 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -32,6 +32,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_IMAGEMAGICK)
 		add_subdirectory (ImageMagick)
 	endif()
+	option (BUILD_PLUGIN_NETCDF
+		"Build NETCDF IO plugin" ON)
+	if (BUILD_PLUGIN_NETCDF)
+		add_subdirectory (netcdf)
+	endif()
 	option (BUILD_PLUGIN_ROOT
 		"Build ROOT plugin (io and plotting)" ON)
 	if (BUILD_PLUGIN_ROOT)
