The netcdf read operation for the file info collection works! All basic quantities verified. Next will be to add tsv exports for number line plotting.
git-svn-id: file:///mnt/svn/rtmath@1365 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/netcdf/CMakeLists.txt
+++ b/rtmath/plugins/netcdf/CMakeLists.txt
@@ -14,12 +14,11 @@ addlib(rtmath_plugin_netcdf SHARED)
 
 set_target_properties( rtmath_plugin_netcdf PROPERTIES FOLDER "Plugins/RT")
 target_link_libraries(rtmath_plugin_netcdf 
-	${rtmath_ddscat-libs} 
+	${rtmath_data-libs} 
 	rtmath_core 
-	rtmath_ddscat 
-	rtmath_images
-	${rtmath_images-libs}
-	${netcdf_LIBRARIES})
+	rtmath_voronoi
+	rtmath_data
+	netcdf)
 INSTALL(TARGETS rtmath_plugin_netcdf 
 	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
 	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
