--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -25,6 +25,7 @@ endmacro(addappdir appname appdefault)
 #add_subdirectory (absorb-slab)
 #add_subdirectory (arm-index-files)
 #add_subdirectory (atmosplot)
+addappdir(arm-info ON)
 addappdir(combo ON)
 addappdir(comborows ON)
 addappdir(conv-units ON)
