--- a/rtmath/plugins/netcdf/CMakeLists.txt
+++ b/rtmath/plugins/netcdf/CMakeLists.txt
@@ -2,6 +2,22 @@ include (common)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
+find_package(HDF5 REQUIRED)
+include_directories(${HDF5_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR_CPP})
+add_definitions(${HDF5_DEFINITIONS})
+
+if(DEFINED HDF5_C_LIBRARIES)
+	set (h5libs ${HDF5_LIBRARIES})
+else()
+	set (h5libs hdf5 hdf5_cpp hdf5_f90cstub)
+endif()
+FIND_PACKAGE(SZIP)
+#	message("${SZIP_INCLUDE_DIRS}")
+#	message("${SZIP_LIBRARIES}")
+IF (DEFINED SZIP_LIBRARIES)
+	include_directories(${SZIP_INCLUDE_DIRS})
+		SET (h5libs ${h5libs} ${SZIP_LIBRARIES})
+ENDIF()
 find_package(netcdf REQUIRED)
 #message("Include ${netcdf_INCLUDE_DIRS}")
 include_directories(${netcdf_INCLUDE_DIRS})
