Image processing work. Can batch process the Pretty images, but the mins and maxs are off due to bad raw pixels. Code works in RelWithDebInfo mode.
git-svn-id: file:///mnt/svn/rtmath@1369 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/ImageMagick/CMakeLists.txt
+++ b/rtmath/plugins/ImageMagick/CMakeLists.txt
@@ -3,9 +3,9 @@ find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
-#message("Include ${ImageMagick_INCLUDE_DIRS}")
+#message("Include ${ImageMagick_LIBRARIES}")
 include_directories(${ImageMagick_INCLUDE_DIRS})
-
+add_definitions(-DNOAUTOLINK_MAGICK)
 add_library (rtmath_plugin_ImageMagick SHARED 
 	plugin-ImageMagick.cpp
 	plugin-ImageMagick.h
