netcdf code reads swacr data fine. However, the root plugin files cannot compile, complaining about template errors in arm_info. No idea why this is happening.
git-svn-id: file:///mnt/svn/rtmath@1371 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/netcdf/CMakeLists.txt
+++ b/rtmath/plugins/netcdf/CMakeLists.txt
@@ -23,6 +23,8 @@ find_package(netcdf REQUIRED)
 include_directories(${netcdf_INCLUDE_DIRS})
 
 add_library (rtmath_plugin_netcdf SHARED 
+	nc-arm_info.cpp
+	nc-sacr.cpp
 	plugin-netcdf.cpp
 	plugin-netcdf.h
 	)
