--- a/rtmath/plugins/root/CMakeLists.txt
+++ b/rtmath/plugins/root/CMakeLists.txt
@@ -2,7 +2,7 @@ include (common)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-find_package(root REQUIRED)
+find_package(ROOT REQUIRED)
 include_directories(${ROOT_INCLUDE_DIR})
 find_package(HDF5 COMPONENTS C)
 if (HDF5_FOUND)
