ROOT should be disabled; it does not work on x64 on Windows.
The tsv export plugin compiles, but somehow the sacr registry is being duplicated, so tsv writes are impossible. No idea why this is happening, so am
switching over to gcc / clang for elucidation.


git-svn-id: file:///mnt/svn/rtmath@1374 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library (rtmath_plugin_tsv SHARED
 	tsv-ddoutput-iso.cpp
 	tsv-ddoutput-ori.cpp
 	tsv-image-basicstats.cpp
+	tsv-sacr.cpp
 	tsv-shapestats.cpp
 	tsv-shapestats-rotdata.cpp
 	tsv-shapestats-voro.cpp
