git-svn-id: file:///mnt/svn/rtmath@1375 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -26,6 +26,7 @@ endmacro(addappdir appname appdefault)
 #add_subdirectory (arm-index-files)
 #add_subdirectory (atmosplot)
 addappdir(arm-info ON)
+addappdir(arm-sacr ON)
 addappdir(combo ON)
 addappdir(comborows ON)
 addappdir(conv-units ON)
