Small fixes to the build system to build and install on linux. plugin-netcdf compiles, but a symlink to FindnetcdfOld.cmake needs to be made. Should modify cmake scripts to only invoke this find script if not on windows.
arm-sacr lightly modified, and the tsv write code is reached on linux.



git-svn-id: file:///mnt/svn/rtmath@1376 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -319,7 +319,8 @@ INSTALL(TARGETS rtmath-tests
 	)
 ENDIF()
 
-INSTALL(TARGETS rtmath_core rtmath_ddscat rtmath_ddscat_base rtmath_voronoi rtmath_mie
+INSTALL(TARGETS rtmath_core rtmath_ddscat rtmath_ddscat_base 
+	rtmath_voronoi rtmath_mie rtmath_data rtmath_images
 	RUNTIME DESTINATION ${INSTALL_BIN_DIR}
 	LIBRARY DESTINATION ${INSTALL_LIB_DIR}
 	ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
