Plugin cleanup in preparation for getting back into rt calculations. The HDF5 code is split into a rtmath_hdf5_cpp dependency that does not depend on rtmath or boost. Prototyped in scott code, and will be used in beth code.
Need to get ddOutput working properly (optimize code) and then need to get ddOutput hdf5 reads to work.

Also need to test build all apps, since not all have been tested recently with major library changes.

git-svn-id: file:///mnt/svn/rtmath@1383 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -19,6 +19,8 @@ IF (DEFINED SZIP_LIBRARIES)
 		SET (h5libs ${h5libs} szip)
 ENDIF()
 
+add_subdirectory (../../related/rtmath_hdf5_cpp "${CMAKE_CURRENT_BINARY_DIR}/rtmath_hdf5_cpp")
+
 include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
 
@@ -40,6 +42,7 @@ set_target_properties( rtmath_plugin_hdf5 PROPERTIES FOLDER "Plugins/ddscat")
 target_link_libraries(rtmath_plugin_hdf5 
 	${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
 	${h5libs}
+	rtmath_hdf5_cpp
 	)
 INSTALL(TARGETS rtmath_plugin_hdf5 
 	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
