Added program_options and a basic ability to get the recommended number of threads on a system.
git-svn-id: file:///mnt/svn/ryan-debug@45 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/apps/logger/logger.rc.in
+++ b/apps/logger/logger.rc.in
@@ -75,7 +75,7 @@ BEGIN
             VALUE "FileDescription", "Logging program that traces process chains"
             VALUE "FileVersion", "@MAJOR@,@MINOR@,@REVISION@,@SVNREVISION@"
             VALUE "InternalName", "Ryan_Debug"
-            VALUE "LegalCopyright", "Copyright (C) 2013"
+            VALUE "LegalCopyright", "Copyright (C) 2014 Ryan Honeyager"
             VALUE "OriginalFilename", "Ryan_Debug-logger.exe"
             VALUE "ProductName", "Ryan_Debug-logger"
             VALUE "ProductVersion", "@MAJOR@.@MINOR@.@REVISION@.@SVNREVISION@"
