--- a/apps/Debug-test/test.rc.in
+++ b/apps/Debug-test/test.rc.in
@@ -75,7 +75,7 @@ BEGIN
             VALUE "FileDescription", "Ryan_Debug testing program"
             VALUE "FileVersion", "@MAJOR@,@MINOR@,@REVISION@,@SVNREVISION@"
             VALUE "InternalName", "Ryan_Debug"
-            VALUE "LegalCopyright", "Copyright (C) 2013"
+            VALUE "LegalCopyright", "Copyright (C) 2014 Ryan Honeyager"
             VALUE "OriginalFilename", "Ryan_Debug-test.exe"
             VALUE "ProductName", "Ryan_Debug-test"
             VALUE "ProductVersion", "@MAJOR@.@MINOR@.@REVISION@.@SVNREVISION@"
