--- a/apps/Debug-test/CMakeLists.txt
+++ b/apps/Debug-test/CMakeLists.txt
@@ -1,19 +1,21 @@
 include (SVNinfo)
 include (signing)
-include (manifest_append)
 
 configure_file(test.rc.in
 	"${CMAKE_CURRENT_BINARY_DIR}/test.rc" @ONLY)
-
+if (MAKE_ASSEMBLY)
+	set(addfiles "${MANIFEST_APP_SNIPPET_NAME}")
+else()
+	set(addfiles)
+endif()
 add_executable (Ryan_Debug-test
 	test.cpp
-	"${CMAKE_CURRENT_BINARY_DIR}/test.rc")
+	"${CMAKE_CURRENT_BINARY_DIR}/test.rc"
+	${addfiles})
 set_target_properties( Ryan_Debug-test PROPERTIES FOLDER "Apps")
-#message("liblist: ${liblist}")
 target_link_libraries(Ryan_Debug-test ${liblist} Ryan_Debug)
 if (MAKE_ASSEMBLY)
-	#manifest_append(Ryan_Debug-test ${MANIFEST_APP_SNIPPET_NAME})
-	signing(Ryan_Debug-test ${MANIFEST_APP_SNIPPET_NAME})
+	signing(Ryan_Debug-test)
 endif()
 
 INSTALL(TARGETS Ryan_Debug-test
